# jowi-io

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  auto_compile.sh
assets/: read.csv  write.csv  write.txt
src/: buffer.cc  error.cc  file.cc  file_descriptor.cc  generic_file.cc  io.cc  io.ccm  is_file.cc  main.cc  open_mode.cc  seek_mode.cc
src/file_descriptor/: borrowed_file_descriptor.cc  file_descriptor.cc  is_borroweable_file_descriptor.cc  is_file_descriptor.cc
src/reader_writer/: http.cc  http.ccp  readers.cc  str_reader.cc
src/unix/: adapter.cc  basic_io.cc  dir.cc  fd_type.cc  file_opener.cc  file_poller.cc  file_reader.cc  file_seeker.cc  file_syncer.cc  file_unblocker.cc  file_writer.cc  local_file.cc  net_address.cc  net_socket.cc  pipe.cc  rw_file.cc  socket_file.cc  stdstream.cc  sys_call.cc  sys_file.cc  sys_net.cc  sys_util.cc
src/win32/: basic_io.cc  fd_type.cc  file_opener.cc  file_poller.cc  file_seeker.cc  file_syncer.cc  file_unblocker.cc
tests/: CMakeLists.txt  file.cc  http.cc  pipe.cc  sock.cc  socket.cc  tests.cpp
